<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background_color"
    tools:context=".OnBoardingFragment">

    <ImageView
        android:id="@+id/hand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/clic_me"
        android:padding="10dp"
        android:src="@drawable/brand_strava_icon_158683"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end"

        app:layout_constraintTop_toTopOf="@id/guideline_h_top"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/onboarding_hi"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/hi_description"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />

    <TextView
        android:id="@+id/hi_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/onboarding_description"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/onboarding_start"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_bot"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>