<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmantLogin"
    android:background="@color/my_background_color"
    app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
    app:layout_constraintLeft_toRightOf="@id/guideline_w_end"
    app:layout_constraintTop_toTopOf="@id/guideline_h_top"
    app:layout_constraintBottom_toBottomOf="@id/guideline_h_bot"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="497dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/brand_strava_icon_158683"
        app:layout_constraintBottom_toTopOf="@+id/email_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_name"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_h_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:nextFocusForward="@id/password_field"
        android:textSize="40sp"
        />
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintBottom_toTopOf="@id/email_field_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:text="@string/login_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/my_background_color"
        android:nextFocusForward="@id/password_field"
        app:layout_constraintBottom_toTopOf="@id/password_label"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end"
        android:layout_margin="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:hint="@string/login_enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/password_field_layout"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        android:textSize="20sp"
        android:text="@string/login_password"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field_layout"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/my_background_color"
        android:layout_margin="20dp"
        android:nextFocusForward="@id/login_button"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/login_enter_your_password"
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline_w_start"
        app:layout_constraintRight_toRightOf="@id/guideline_w_end"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_bot"
        android:text="@string/login_login"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_w_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />




</androidx.constraintlayout.widget.ConstraintLayout>